# higress-report-agent

./: .env.example  .gitignore  README.EN.md  README.cn.md  README.md  agent_config.py  changelog_generator.py  github_proxy_mcp_server.py  main.py  monthly_report_generator.py  pyproject.toml  report_generator.py  report_main.py  wechat-article-cn.md
tools/: __init__.py  report_tools.py
utils/: extract_pr_numbers.py  issue_helper.py  pr_helper.py
