[project]
name = "higress-report-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "mcp>=1.8.0",
    "python-dateutil>=2.9.0.post0",
    "qwen-agent[code-interpreter,gui]>=0.0.22",
]

[tool.uv.workspace]
members = [
    "myproject",
]
